# CEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  2mattest.mtl  AGENTS.md  ARCH.md  CMakeLists.txt  CMakePresets.json  ColtehEngine.sln  README.md
CEngine/: PBR_Standard_Fragment.frag  PBR_Standard_Vertex.vert  SSAO_Fragment.frag  SSAO_Vertex.vert
CEngine/missing/: missing.cprj
CEngine/test_model/: Barrel.cprj  barrel_low.mtl  hard_sphere.mtl
ColtehEngine/: ColtehEngine.vcxproj  ColtehEngine.vcxproj.filters  PBR_Standard_Fragment.frag  PBR_Standard_Vertex.vert  SSAO_Fragment.frag  SSAO_Vertex.vert  chad_chin.mtl  random.DDS  uvtemplate.DDS
ColtehEngine/missing/: missing.DDS  missing.cprj
ColtehEngine/src/: CPPLINT.bat
ColtehEngine/test_model/: Barrel.cprj  barrel_low.mtl  hard_sphere.mtl
ColtehEngine/tmp/: PBR_Standard_Fragment.frag  PBR_Standard_Vertex.vert
assets/barrel/: barrel.casset
barrel_test/: barrel_high.mtl  barrel_low.mtl  barrel_test.json
cmake/: RunClangFormatCheck.cmake  Tooling.cmake
docs/: animation_requirements.md  asset_formats.md  audio_requirements.md  blender_addon.md  cpp_style.md  cscene_implementation_plan.md  entity_library.md  game_schema.md  physics_requirements.md  scene_architecture.md  ui.md
docs/arch/: CORE.md  DELIVERY.md  IMPLEMENTATION.md  NETWORK.md  STATUS.md  SYSTEMS.md
samples/viewer/: CMakeLists.txt  game.json  imgui_platform.cpp  imgui_platform.h  main.cpp  main.h
samples/viewer/entity/: player_entity.cpp  player_entity.h  player_spawn_entity.h
samples/viewer/game/: game_coordinator.cpp  game_coordinator.h  physics_ball_assets.cpp  physics_ball_assets.h  physics_ball_weapon.cpp  physics_ball_weapon.h
samples/viewer/input/: actions.cpp  actions.h
samples/viewer/ui/: hud.css  hud.html  hud.rcss  hud.rml  start_menu.css  start_menu.html  start_menu.rcss  start_menu.rml  tuning.css  tuning.html  tuning.rcss  tuning.rml
schemas/: engine.game.json
src/: camera.cpp  camera.h  context.h  controls.cpp  controls.h  engine_context.h  handle.h  light.cpp  light.h  log.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  model_importer.cpp  model_importer.h  render_backend.h  render_system.cpp  render_system.h  renderable.cpp  renderable.h  shader_constants.cpp  shader_constants.h  texture.cpp  texture.h
src/animation/: animation_backend.h  animation_system.cpp  animation_system.h
src/assets/: animation_asset.cpp  animation_asset.h  asset_database.cpp  asset_database.h  asset_database_load.cpp  asset_error.h  asset_format.cpp  asset_format.h  asset_handle.h  asset_io.cpp  asset_io.h  asset_store.cpp  asset_store.h  asset_store_load.cpp  audio_asset.cpp  audio_asset.h  binary.h  casset_asset.cpp  casset_asset.h  casset_loader.cpp  casset_loader.h  cscene_format.h  cscene_reader.cpp  cscene_reader.h  format.h  material_asset.cpp  material_asset.h  material_loader.cpp  material_loader.h  mesh_asset.cpp  mesh_asset.h  mesh_loader.cpp  mesh_loader.h  particle_asset.cpp  particle_asset.h  physics_asset.cpp  physics_asset.h  physics_loader.cpp  physics_loader.h  reader.cpp  (+15 more)
src/audio/: audio_backend.h  audio_system.cpp  audio_system.h
src/entity/: audio_entities.cpp  audio_entities.h  camera_entity.cpp  camera_entity.h  collider_entity.cpp  collider_entity.h  dynamic_prop.cpp  dynamic_prop.h  empty_entity.cpp  empty_entity.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  environment_probe_entity.cpp  environment_probe_entity.h  exponential_height_fog_entity.cpp  exponential_height_fog_entity.h  fog_entity.cpp  fog_entity.h  light_entity.cpp  light_entity.h  logic_entities.cpp  logic_entities.h  marker_entities.h  physics_constraint_entity.cpp  physics_constraint_entity.h  player_entity.cpp  player_entity.h  player_start.cpp  player_start.h  post_process_entity.cpp  post_process_entity.h  prefab_entity.cpp  prefab_entity.h  prop_entity.cpp  prop_entity.h  skybox_entity.cpp  skybox_entity.h  static_prop.cpp  (+3 more)
src/foundation/: slot_handle.h
src/input/: action.h  input_backend.h  input_system.cpp  input_system.h
src/logging/: logger.h
src/opengl/: opengl_render_backend.cpp  opengl_render_backend.h  opengl_render_data.h  opengl_shadow_system.cpp  opengl_shadow_system.h  opengl_shadow_types.h  opengl_texture.cpp  opengl_texture.h
src/physics/: physics_backend.h  physics_system.cpp  physics_system.h  physics_types.h
src/renderer/: camera.cpp  camera.h  environment_probe.h  light.cpp  light.h  lightmap.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_instance.cpp  mesh_instance.h  particle_emitter.h  render_backend.h  render_system.cpp  render_system.h  renderable.cpp  renderable.h  texture.h  ui_frame.h
src/scene/: scene.cpp  scene.h  scene_loader.cpp  scene_loader.h  scene_physics_state.cpp  scene_physics_state.h  scene_render_state.cpp  scene_render_state.h
src/shaders/: pbr_standard.cpp  pbr_standard.h  shader.cpp  shader.h  ssao.cpp  ssao.h
src/ui/: html_file_interface.cpp  html_file_interface.h  html_render_interface.cpp  html_render_interface.h  html_runtime.cpp  html_runtime.h  html_system_interface.cpp  html_system_interface.h  ui_system.cpp  ui_system.h
src/vulkan/: vulkan_render_backend.cpp  vulkan_render_backend.h
src/window/: window_backend.h  window_system.cpp  window_system.h
tests/animation/: animation_system_tests.cpp
tests/assets/: asset_database_tests.cpp  asset_runtime_tests.cpp  asset_store_tests.cpp  cscene_reader_tests.cpp  store_tests.cpp  test_asset_writer.h
tests/audio/: audio_backend_tests.cpp  audio_system_tests.cpp
tests/renderer/: directional_shadow_cascade_tests.cpp  environment_probe_tests.cpp  particle_renderer_tests.cpp  particle_system_tests.cpp  shadow_system_tests.cpp  ui_renderer_tests.cpp
tests/scene/: entity_tests.cpp  scene_render_state_tests.cpp  subsystem_entity_tests.cpp
tests/ui/: ui_system_tests.cpp
tests/viewer/: game_tests.cpp
tests/window/: window_system_tests.cpp
tools/: add_source_headers.py  lightmap_test.py
tools/blender_addon/: package_addon.py
tools/ceasset/: author_sponza_collision.py  (+3 more)
(+354 files in other folders)
